Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T4881267.out
T4881267.java:10:21: compiler.err.instanceof.reifiable.not.safe: java.lang.Object, T
1 error
